# kms-aead-rs

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: tests.yml
examples/: aws_kms.rs  gcp_kms.rs  kms_with_explicit_key.rs  only_aead.rs
src/: api.rs  errors.rs  kms_envelope_encryption.rs  lib.rs  ring_encryption.rs  ring_encryption_support.rs  ring_envelope_encryption.rs  ring_support.rs  types.rs
src/providers/: aws_kms_encryption.rs  gcp_kms_encryption.rs  mod.rs
