[package]
name = "kms-aead"
version = "0.6.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "KMS/AEAD envelope encryption for GCP/AWS KMS and Ring AEAD encryption"
homepage = "https://github.com/abdolence/kms-aead-rs"
repository = "https://github.com/abdolence/kms-aead-rs"
documentation = "https://docs.rs/kms-aead"
categories = ["cryptography","api-bindings"]
keywords = ["kms", "google", "aws", "envelope"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE", "SECURITY.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "kms_aead"
path = "src/lib.rs"
bench = false

[dependencies]
tracing = "0.1"
secret-vault-value = { version = "0.3" }
rvstruct = "0.3"
rsb_derive = "0.5"
async-trait = "0.1"
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
ring = { version = "0.16", features = ["default", "std"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
gcloud-sdk = { version = "0.18", optional = true }
tonic = { version = "0.8", optional = true }
aws-config = { version = "0.46", optional = true }
aws-sdk-kms = { version = "0.17", optional = true }

[dev-dependencies]
serde_json = { version = "1" }
proptest = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.3", features = ["async", "async_futures", "cargo_bench_support", "html_reports", "futures", "tokio", "async_tokio"] }

[build-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }

[features]
default = []
serde = ["dep:serde", "chrono/serde", "secret-vault-value/serde"]
ring-aead-encryption = ["dep:ring"]
gcp = ["dep:tonic", "gcloud-sdk"]
gcp-kms-encryption = ["gcp", "gcloud-sdk/google-cloud-kms-v1", "ring-aead-encryption"]
aws = ["dep:aws-config"]
aws-kms-encryption = ["aws", "dep:aws-sdk-kms", "ring-aead-encryption"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "aws_kms"
path = "examples/aws_kms.rs"
required-features = ["aws-kms-encryption"]

[[example]]
name = "gcp_kms"
path = "examples/gcp_kms.rs"
required-features = ["gcp-kms-encryption"]

[[example]]
name = "kms_with_explicit_key"
path = "examples/kms_with_explicit_key.rs"
required-features = ["aws-kms-encryption"]
